# app

./: DOCS.md  README.md  pyproject.toml
app/: main.py  router.py  services.py  validators.py
tests/: test_main.py  test_services.py  test_validators.py
