[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["MKurziankou <MKurzenkov.otd14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = {extras = ["standart"], version = "^0.26.0"}
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
isort = "^5.13.2"
requests = "^2.31.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
